tests/data/arff/invalid/wrong_line.arff
@RELATION name

@ATTRIBUTE first    NUMERIC
@ATTRIBUTE second   numeric
@THIS IS NOT A CORRECT LINE!
@ATTRIBUTE class    {-1,1}

@DATA
-1.117827500607882,-2.9087188881250993
-0.5282118298909262,-0.335880984968183973
